<resources>
    <string name="app_name">SEP4</string>

    <string name="sideMenu_room">Room</string>
    <string name="sideMenu_groupAbout">Other</string>
    <string name="sideMenu_groupAccount">Account</string>
    <string name="sideMenu_account">Account Settings</string>
    <string name="sideMenu_about">About us</string>
    <string name="sideMenu_contact">Contact us</string>
    <string name="sideMenu_logout">Logout</string>

    <string name="side_header_username">Welcome back</string>
    <string name="side_header_email">Email</string>

    <string name="home_no_values">No metric values for this room !</string>

    <!-- home -->
    <string name="home_notification">Turn On or Off the notifications</string>
    <string name="home_tC">Display temperature in C</string>
    <string name="home_tF">Display temperature in F</string>
    <string name="notification_channel1">Temperature warning</string>
    <string name="notification_channel2">Humidity warning</string>
    <string name="notification_channel3">CO2 warning</string>
    <string name="notification_channel_display_temp">The temperature is over the warning value!</string>
    <string name="notification_channel_display_hum">The humidity is over the warning value!</string>
    <string name="notification_channel_display_co2">The CO2 is over the warning value!</string>
    <string name="notification_channel1_desc">Alerts the user when the temperature exceeds the set value</string>
    <string name="notification_channel2_desc">Alerts the user when the humidity exceeds the set value</string>
    <string name="notification_channel3_desc">Alerts the user when the CO2 exceeds the set value</string>
    <string name="home_load_ok">Data refreshed</string>

    <!-- single room -->
    <string name="single_id">Room id :</string>
    <string name="single_name">Room name :</string>
    <string name="single_Temperature">Temperature :</string>
    <string name="single_humidity">Humidity :</string>
    <string name="single_co2">CO2 concentration :</string>
    <string name="single_detail">Detail</string>
    <string name="single_remove">Delete</string>
    <string name="single_norm">To Norms</string>
    <string name="singleroom_delete_dialog_title">Delete</string>
    <string name="singleroom_delete_dialog_message">This operation is irreversible. Are you sure you want to delete this image?</string>
    <string name="single_delete_ok">Room deleted !</string>
    <string name="singleroom_add_title">Add a room</string>
    <string name="singleroom_add_name">Room name :</string>
    <string name="singleroom_add_number">Number :</string>

    <!-- settings -->
    <string name="value">Value</string>
    <string name="MaxT">Maximum temperature (C):</string>
    <string name="MinT">Minimum temperature (C):</string>
    <string name="MaxH">Maximum humidity (%rh):</string>
    <string name="MinH">Minimum humidity (%rh):</string>
    <string name="MaxC">Maximum C02 (ppm):</string>
    <string name="MinC">Minimum C02 (ppm):</string>
    <string name="settings_saveChange">Save changes</string>
    <string name="set_error">No metric values for this room</string>

    <!-- register error label -->
    <string name="R_passwordLengthE">Password should be more than 6 characters</string>
    <string name="R_passwordNotMachE">Password doesn\'t match</string>
    <string name="R_emailNotValidE">The format of email isn\'t correct</string>

    <string name="R_success">Register success !</string>
    <string name="main_login_info">Please login first</string>
    <string name="login_label">Sign In to your existing account</string>
    <string name="login_forgetPassword">Forgot password? <b>Click here</b></string>
    <string name="login_forget_ok">Password reset!</string>

    <!-- account settings -->
    <string name="account_label">Change account info here</string>
    <string name="account_save">Save changes</string>
    <string name="account_save_ok">Change saved!</string>

    <string name="login_wrongPassword">Wrong password or email</string>
    <!-- register -->
    <string name="signup_label">Create new account</string>

    <string name="logout">Logout succeeded! Now jump to the pre-login interface...</string>
    <!-- for nav map label -->
    <string name="navMap_home">Home</string>
    <string name="navMap_register">SignUp</string>
    <string name="navMap_signIn">SignIn</string>
    <!--Make bold-->
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <b>Sign Up</b> </string>
    <string name="already_have_an_account_sign_in">Already have an account? <b>Sign in</b> </string>

    <string name="firebase_dbLink">https://sep4-ed4e9-default-rtdb.europe-west1.firebasedatabase.app/</string>
    .
    <string name="sign_up">Sign Up</string>

    <string name="contact_info">Email: sep4@via.dk\n\nPhone no: 81 90 36 94</string>

    <string name="about_us_description1"><b>Our Project</b>\nConsists of an embedded system for Art galleries. The main purpose - present the data of the room on an Android app (temperature, humidity, CO2) and act accordingly (open a window, etc). </string>

    <string name="about_us_description2"><b>IOT team </b>\nResponsible for the embedded part of the system.\n
        \n<b>DataWarehouse team</b>\nResponsible for getting the data from embedded system and storing it in a data warehouse. Also making a web service to make the data accesible.\n
        \n<b>Android team</b>\nResponsible for making an android application that will present the data received from the data warehouse in various ways. </string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>