<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/background2"
    tools:context=".view.LogInFragment">

    <TextView
        android:id="@+id/textViewSignIn"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign In"
        android:textAlignment="center"
        android:textColor="#1682CA"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textViewSignInDescription"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewSignIn"
        android:layout_marginTop="72dp"
        android:text="@string/login_label"
        android:textAlignment="center"
        android:textColor="#16AFCA" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTil"
        android:layout_width="match_parent"
        android:layout_above="@+id/passwordTil"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">
        <!--Email-->
        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:text=""
            tools:ignore="SpeakableTextPresentCheck"
            android:backgroundTint="#e8fffb"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTil"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#e8fffb"
            android:hint="Password"
            android:inputType="textPassword"
            android:text=""
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--SignIn button-->

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordTil"
        android:layout_marginTop="9dp"
        android:backgroundTint="#00BCD4"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:text="Sign In" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInBtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="90dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/forgpasBtn"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_forgetPassword"
            android:textAlignment="center"
            android:textColor="#00BCD4" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/createAccountView"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textAlignment="center"
            android:textColor="#00BCD4" />
    </LinearLayout>


</RelativeLayout>