<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:padding="20dp">

    <TextView
        android:id="@+id/textViewSignUp"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textAlignment="center"
        android:textColor="#1682CA"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewSignUpDescription"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewSignUp"
        android:text="@string/signup_label"
        android:textAlignment="center"
        android:textColor="#16AFCA" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/usernameTil"
        android:layout_marginBottom="10dp">

        <!--Name-->
        <EditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#e8fffb"
            android:hint="Name"
            android:inputType="text"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/emailTil"
        android:layout_marginBottom="10dp">

        <!--Username-->
        <EditText
            android:id="@+id/usernameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#e8fffb"
            android:hint="Username"
            android:inputType="text"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/phonenoTil"
        android:layout_marginBottom="10dp">


        <!--Email-->
        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#e8fffb"
            android:hint="Email"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phonenoTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passwordTil"
        android:layout_marginBottom="10dp">

        <!--PhoneNo-->
        <EditText
            android:id="@+id/phoneNoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#e8fffb"
            android:hint="Phone Number"
            android:inputType="phone"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/confirmpasswordTil"
        android:layout_marginBottom="10dp">

        <!--Password-->
        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#e8fffb"
            android:hint="Password"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmpasswordTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signUpBtn"
        android:layout_marginBottom="10dp">

        <!--Confirm Password-->
        <EditText
            android:id="@+id/confirmPasswordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#e8fffb"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <!--Sign up button-->


    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signinView"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#00BCD4"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/signinView"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/already_have_an_account_sign_in"
        android:textAlignment="center"
        android:textColor="#16AFCA" />

</RelativeLayout>